INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS = 

AM_CXXFLAGS = 

bin_PROGRAMS = rtflames

rtflames_SOURCES = \
	vector.hpp  \
	header.h  \
	main.cpp  \
	main.hpp  \
	wxGLBuffer.cpp  \
	wxGLBuffer.hpp  \
	flames/bougie.cpp  \
	flames/bougie.hpp  \
	flames/firmalampe.cpp  \
	flames/firmalampe.hpp  \
	flames/flame.cpp  \
	flames/flame.hpp  \
	flames/flames.hpp  \
	flames/glowengine.cpp  \
	flames/glowengine.hpp  \
	flames/ies.cpp  \
	flames/ies.hpp \
	flames/leadSkeleton.cpp  \
	flames/leadSkeleton.hpp  \
	flames/periSkeleton.cpp  \
	flames/periSkeleton.hpp  \
	flames/pbuffer.cpp  \
	flames/pbuffer.hpp  \
	flames/skeleton.cpp  \
	flames/skeleton.hpp  \
	flames/solidePhoto.cpp  \
	flames/solidePhoto.hpp  \
	flames/wick.cpp  \
	flames/wick.hpp  \
	interface/solverDialog.cpp  \
	interface/solverDialog.hpp  \
	interface/flameDialog.cpp  \
	interface/flameDialog.hpp  \
	interface/interface.hpp  \
	interface/mainPanels.cpp  \
	interface/mainPanels.hpp  \
	interface/numTextCtrl.cpp  \
	interface/numTextCtrl.hpp  \
	scene/camera.cpp  \
	scene/camera.hpp  \
	scene/graphicsFn.cpp  \
	scene/graphicsFn.hpp  \
	scene/intensity.hpp  \
	scene/material.cpp  \
	scene/material.hpp  \
	scene/OBJReader.cpp  \
	scene/OBJReader.hpp  \
	scene/object.cpp  \
	scene/object.hpp  \
	scene/scene.cpp  \
	scene/scene.hpp  \
	scene/source.cpp  \
	scene/source.hpp  \
	scene/texture.cpp  \
	scene/texture.hpp  \
	shaders/CgShader.cpp  \
	shaders/CgShader.hpp  \
	shaders/CgSVShader.cpp  \
	shaders/CgSVShader.hpp  \
	shaders/CgSPFragmentShader.cpp  \
	shaders/CgSPFragmentShader.hpp  \
	shaders/CgBougieShaders.cpp  \
	shaders/CgBougieShaders.hpp  \
	shaders/CgBlurShaders.cpp  \
	shaders/CgBlurShaders.hpp  \
	solvers/solver.cpp  \
	solvers/solver.hpp  \
	solvers/GSsolver.cpp  \
	solvers/GSsolver.hpp  \
	solvers/Hsolver.cpp  \
	solvers/Hsolver.hpp  \
	solvers/GCSSORsolver.cpp  \
	solvers/GCSSORsolver.hpp  

flames_LDFLAGS = 

flames_LDADD = 

