INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS = 

AM_CXXFLAGS = 

bin_PROGRAMS = rtflames

rtflames_SOURCES = \
	main.cpp  \
	flames/bougie.cpp  \
	flames/firmalampe.cpp  \
	flames/flame.cpp  \
	flames/glowengine.cpp  \
	flames/ies.cpp  \
	flames/leadSkeleton.cpp  \
	flames/periSkeleton.cpp  \
	flames/pbuffer.cpp  \
	flames/skeleton.cpp  \
	flames/solidePhoto.cpp  \
	flames/wick.cpp  \
	interface/solverDialog.cpp  \
	interface/flameDialog.cpp  \
	interface/GLFlameCanvas.cpp  \
	interface/mainFrame.cpp  \
	interface/mainPanels.cpp  \
	interface/numTextCtrl.cpp  \
	scene/camera.cpp  \
	scene/graphicsFn.cpp  \
	scene/material.cpp  \
	scene/OBJReader.cpp  \
	scene/object.cpp  \
	scene/scene.cpp  \
	scene/source.cpp  \
	scene/texture.cpp  \
	shaders/CgShader.cpp  \
	shaders/CgSVShader.cpp  \
	shaders/CgSPFragmentShader.cpp  \
	shaders/CgBougieShaders.cpp  \
	shaders/CgBlurShaders.cpp  \
	solvers/solver.cpp  \
	solvers/GSsolver.cpp  \
	solvers/Hsolver.cpp  \
	solvers/GCSSORsolver.cpp

rtflames_LDFLAGS = 

rtflames_LDADD = 

